<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueAlumni"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="381dp"
        android:layout_height="747dp"
        android:paddingTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_home_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/islander_traditions_keeper_title"
                android:textAllCaps="true"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="22sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat" />

            <TextView
                android:id="@+id/text_home_tamucc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/tamucc_full"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:fontFamily="@font/montserrat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_home_pride_tradition"
                    android:layout_width="212dp"
                    android:layout_height="26dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/pride_tradition"
                    android:textColor="@color/ltgreyAlumni"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    app:fontFamily="@font/montserrat" />

                <TextView
                    android:id="@+id/text_home_year"
                    android:layout_width="149dp"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/tamucc_year"
                    android:textColor="@color/ltgreyAlumni"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    app:fontFamily="@font/montserrat" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <ImageButton
                android:id="@+id/button_home_history"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/historybutton"
                android:text="@string/menu_history"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="15sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat" />

            <ImageButton
                android:id="@+id/button_home_traditions"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/traditionsbutton"
                android:text="@string/menu_traditions"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="15sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat" />

            <ImageButton
                android:id="@+id/button_home_prizes"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/prizesbutton"
                android:text="@string/menu_prizes"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="15sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat" />

            <ImageButton
                android:id="@+id/button_home_buildings"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/buildingsbutton"
                android:text="@string/menu_buildings"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="15sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat" />

            <ImageButton
                android:id="@+id/button_home_alumni"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/alumnibutton"
                android:text="@string/menu_alumni"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="15sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>