<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueAlumni">

    <TextView
        android:id="@+id/text_profile_title"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:gravity="start|center_vertical"
        android:text="@string/profile_title"
        android:textAllCaps="true"
        android:textColor="@color/ltgreyAlumni"
        android:textSize="27sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/text_profile_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/profile_name_title"
        android:textColor="@color/ltgreyAlumni"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_title"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/text_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/profile_name"
        android:textColor="@color/ltgreyAlumni"
        android:textSize="15sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toEndOf="@+id/text_profile_name_title"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_title"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/text_profile_class_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/profile_class_title"
        android:textColor="@color/ltgreyAlumni"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_name_title"
        app:layout_constraintVertical_bias="0.009" />

    <TextView
        android:id="@+id/text_class_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:text="@string/profile_class"
        android:textColor="@color/ltgreyAlumni"
        android:textSize="15sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toEndOf="@+id/text_profile_class_title"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_name" />

    <TextView
        android:id="@+id/text_profile_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="304dp"
        android:layout_marginRight="304dp"
        android:gravity="end"
        android:text="@string/profile_email_title"
        android:textColor="@color/ltgreyAlumni"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_class_title" />

    <TextView
        android:id="@+id/text_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:gravity="end"
        android:text="@string/profile_email"
        android:textColor="@color/ltgreyAlumni"
        android:textSize="15sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_profile_email_title"
        app:layout_constraintTop_toBottomOf="@+id/text_class_name"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/text_profile_tradition_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/profile_traditions_count"
        android:textColor="@color/ltgreyAlumni"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_title"
        app:layout_constraintVertical_bias="0.287" />

    <TextView
        android:id="@+id/text_profile_tradition_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/profile_traditions_progress"
        android:textColor="@color/ltgreyAlumni"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_title"
        app:layout_constraintVertical_bias="0.363" />

    <ImageView
        android:id="@+id/image_profile_user_photos"
        android:layout_width="339dp"
        android:layout_height="214dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_tradition_progress"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@color/greenAlumni" />

    <TextView
        android:id="@+id/text_profile_tradition_progress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/profile_traditions_tag"
        android:textColor="@color/ltgreyAlumni"
        android:textSize="12sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profile_user_photos"
        app:layout_constraintVertical_bias="0.336" />
</androidx.constraintlayout.widget.ConstraintLayout>