<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueAlumni">

    <TextView
        android:id="@+id/text_prizes_title"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:layout_marginBottom="300dp"
        android:gravity="left|center_vertical"
        android:text="@string/prizes_title"
        android:textAllCaps="true"
        android:textColor="@color/ltgreyAlumni"
        android:textSize="27sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <ScrollView
        android:layout_width="371dp"
        android:layout_height="667dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_prizes_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_prizes_prize1"
                android:layout_width="265dp"
                android:layout_height="190dp"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="44dp"
                android:adjustViewBounds="true"
                app:srcCompat="@color/greenTAMUCC" />

            <TextView
                android:id="@+id/text_prizes_prize_name1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/prizes_item1"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat" />

            <TextView
                android:id="@+id/text_prizes_prize_details1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/prizes_item1_details"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="18sp"
                android:textStyle="italic"
                app:fontFamily="@font/montserrat" />

            <ImageView
                android:id="@+id/image_prizes_prize2"
                android:layout_width="265dp"
                android:layout_height="190dp"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="44dp"
                android:adjustViewBounds="true"
                app:srcCompat="@color/greenTAMUCC" />

            <TextView
                android:id="@+id/text_prizes_prize_name2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/prizes_item2"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat" />

            <TextView
                android:id="@+id/text_prizes_prize_details2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/prizes_item2_details"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="18sp"
                android:textStyle="italic"
                app:fontFamily="@font/montserrat" />

            <ImageView
                android:id="@+id/image_prizes_prize3"
                android:layout_width="265dp"
                android:layout_height="190dp"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="44dp"
                android:adjustViewBounds="true"
                app:srcCompat="@color/greenTAMUCC" />

            <TextView
                android:id="@+id/text_prizes_prize_name3"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/prizes_item3"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat" />

            <TextView
                android:id="@+id/text_prizes_prize_details3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/prizes_item3_details"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="18sp"
                android:textStyle="italic"
                app:fontFamily="@font/montserrat" />

            <ImageView
                android:id="@+id/image_prizes_prize4"
                android:layout_width="265dp"
                android:layout_height="190dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="44dp"
                android:adjustViewBounds="true"
                app:srcCompat="@color/greenTAMUCC" />

            <TextView
                android:id="@+id/text_prizes_prize_name4"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/prizes_item4"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat" />

            <TextView
                android:id="@+id/text_prizes_prize_details4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/prizes_item4_details"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="18sp"
                android:textStyle="italic"
                app:fontFamily="@font/montserrat" />

            <ImageView
                android:id="@+id/image_prizes_prize5"
                android:layout_width="265dp"
                android:layout_height="190dp"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="44dp"
                android:adjustViewBounds="true"
                app:srcCompat="@color/greenTAMUCC" />

            <TextView
                android:id="@+id/text_prizes_prize_name5"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/prizes_item5"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat" />

            <TextView
                android:id="@+id/text_prizes_prize_details5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/prizes_item5_details"
                android:textColor="@color/ltgreyAlumni"
                android:textSize="18sp"
                android:textStyle="italic"
                app:fontFamily="@font/montserrat" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>